VDR Plugin 'streamdev' Revision History
---------------------------------------

- enable section filtering only with compatible clients (thanks to Petri
  Hintukainen)
- fixed compiler warning
- added EIT to HTTP TS streams (thanks to Rolf Ahrenberg)
- compatibility for FreeBSD (thanks to Joerg Pulz)
- added TS PAT repacker (thanks to Rolf Ahrenberg)
- fixed Makefile's default target (suggested by Rolf Ahrenberg)
- workaround for tuning problems on 1.5.x clients (thanks to alexw)
- added VTP support for PS, PES and EXTERN (PS requested by mpanczyk)
- fixed gcc-4.3.0 warnings (thanks to Petri Hintukainen)
- fixed busy wait when client isn't accepting data fast enough (thanks to
  Olli Lammi)
- fixed client reconnect after server restart (reported by alexw)
- added lock in ~cStreamdevDevice (thanks to Petri Hintukainen)
- externremux: check for ringbuffer full condition (reported by
  vdr-freak@vdrportal)
- diffserv support for traffic shaping and WMM capable WLAN accesspoint
  (suggested by ollo@vdrportal)
- check vasprintf() return code (thanks to Rolf Ahrenberg)
- fixed memory leak in buffer overflow situations (thanks to Rolf Ahrenberg)
- added PAT, PMT and PCR to HTTP TS streams (thanks to Petri Hintukainen and
  Rolf Ahrenberg)
- detect data stream disconnections. Fixes high CPU load (thanks to Petri
  Hintukainen)
- fixed segfault with VDR 1.5 (thanks to Petri Hintukainen)
- made section filtering work (thanks to Petri Hintukainen)
- added compiler flag -Wall and fixed corresponding warnings (thanks to
  Rolf Ahrenberg)
- close pipe when externremux is gone. Fixes high CPU load problem
- close connection when client is gone. Fixes high CPU load problem
- silenced compiler warnings (thanks to Rolf Ahrenberg)
- added commandline parameter for externremux script (thanks to Rolf
  Ahrenberg)
- detach receivers before switching transponders
- API changes for VDR 1.5.0 (thanks to Udo Richter)