@@ -1,7 +1,7 @@
 #
 # Makefile for a Video Disk Recorder plugin
 #
-# $Id: Makefile,v 1.10 2008/03/12 09:36:27 schmirl Exp $
+# $Id: Makefile,v 1.11 2008/03/28 15:11:40 schmirl Exp $
 
 # The official name of this plugin.
 # This name will be used in the '-P...' option of VDR to load the plugin.
@@ -61,7 +61,7 @@ SERVEROBJS = $(PLUGIN)-server.o \
 	server/server.o server/connectionVTP.o server/connectionHTTP.o \
 	server/componentHTTP.o server/componentVTP.o server/connection.o \
 	server/component.o server/suspend.o server/setup.o server/streamer.o \
-	server/livestreamer.o server/livefilter.o \
+	server/livestreamer.o server/livefilter.o server/menuHTTP.o \
 	\
 	remux/tsremux.o remux/ts2ps.o remux/ts2es.o remux/extern.o
 	
